# StreamBridge

./: .gitignore  CONTRIBUTING.md  PROJECT_TREE.txt  README.md  build.gradle  package-lock.json  package.json  settings.gradle
app/: build.gradle  proguard-rules.pro
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  native-lib.cpp
app/src/main/java/com/example/edgeapp/: EdgeGLRenderer.kt  MainActivity.kt  NativeBridge.kt
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: themes.xml
scripts/: create_dev_commits.ps1
web/: index.html  tsconfig.json  viewer.ts
